# OpenAI-GPT-5-Hackathon

./: .env.example  .gitignore  AGENTS.md  Makefile  pyproject.toml
assets/frontend/: app.js  index.html  styles.css
assets/prompts/: README.md  query-bot-system.md
assets/scenarios/: dev.yaml
configs/: README.md  dev.yaml
docs/: database-overview.md  self-enriching-business-intelligence.md
docs/agents/: query-agent.md  schema-agent.md  scraper-agent.md  update-agent.md
schema/: README.md
src/agents/: query_agent.py  schema_agent.py  scraper_agent.py  update_agent.py
src/core/: chat.py  config.py  dependencies.py  evidence.py  logging_utils.py  migrations.py  missing_data.py  observability.py  record_utils.py  runner.py  schema.py  webapp.py
src/integrations/: csv_crm_client.py  csv_dataset.py  csv_sql_executor.py  in_memory_sql_executor.py  openai_agent_sdk.py  openai_models.py  openai_search.py
tests/agents/: test_query_agent_scaffolding.py  test_schema_agent.py  test_scraper_agent.py  test_update_agent.py
tests/core/: test_chat_cli.py  test_config_loader.py  test_dependencies.py  test_evidence_sink.py  test_missing_data_flagger.py  test_observability.py  test_record_utils.py  test_runner_scaffolding.py  test_schema_escalator.py  test_webapp.py
tests/fixtures/: README.md
tests/integrations/: __init__.py  test_csv_crm_client.py  test_csv_dataset.py  test_csv_sql_executor.py  test_in_memory_sql_executor.py  test_openai_search.py
